# buildComputerAgent

./: .gitignore  CLAUDE.md  README.md  launch.bat  launch.sh  launch_macos.sh  pyproject.toml
doc/: instrumentation.md
src/buildComputer/: app.py
src/buildcomp/: tools.py
src/buildcomputer/: app.py  app_ref.py  tools_ref.py  utilities.py
src/buildcomputer/agents/: agent.py  computerBuilderAgent.py  cpuAgent.py  mainUnitAgent.py  monitorAgent.py
src/buildcomputer/instrumentation/: instrumentation.py
